--- a/ImageSearch.html
+++ b/ImageSearch.html
@@ -19,7 +19,7 @@
     <div id="form_contain">
         <form action="https://www.google.com/search">
             <div id="formbox">
-                <input id="search_field" style="height: 46px;" type="text" name="q"/>
+                <input id="search_field" autofocus="autofocus" type="text" name="q"/>
                 <input type="hidden" name="tbm"value="isch" />
 
                 <div id="button_div">
