--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
                 <img id="image" src="style/googlelogo_color_272x92dp.png" alt="Google_Logo" />
             </div>
         </div>
-        
-        <form action="https://www.google.com/search">
-            <div id="formbox">
-                <input id="search_field" type="text" autofocus="autofocus" name="q" />
-                <div id="button_div">
-                    <input id="button" type="submit" value="Google Search" role="button" name="btnk" />
-                    <input id="button" type="submit" value="I'm Feeling Lucky" name="btnI" aria-label="I'm Feeling Lucky" />
+
+        <div id="form_contain">
+            <form action="https://www.google.com/search">
+                <div id="formbox">
+                    <input id="search_field" type="text" autofocus="autofocus" name="q" />
+                    <div id="button_div">
+                        <input id="button" type="submit" value="Google Search" role="button" name="btnk" />
+                        <input id="button" type="submit" value="I'm Feeling Lucky" name="btnI" aria-label="I'm Feeling Lucky" />
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </body>
 
