pseudo-element added

--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header> <a href="index.html">
-        <span class="spand" aria-hidden="true"></span> </a> 
+        <span class="spand" aria-hidden="true">::before</span> </a> 
         <a style="justify-content:flex-end;" href="index.html"> Google Search</a>
      </header>
     <div class="bar">
